[tool.poetry]
name = "solarsystem"
version = "0.1.0"
description = "2D Solar System Simulator Made In Pygame"
authors = ["Hennoson <henry.oliver.edwards@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
